# querty

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  TODO
classifier/: README.md  classify.py  feature_extraction.py  html_extract_info.py  requirements.txt  serv.py  train.py  train_and_test.py
config/: config.toml  solr_schema.xml
config/solr/: data-config.xml  managed-schema  params.json  schema.xml  solrconfig.xml  spellings.txt  stopwords.txt
docs/: project_structure  ranking_system
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Results.vue  SearchBar.vue  StartPage.vue  SuggestionsBox.vue
frontend/src/components/utils/: sessions.js
frontend/src/router/: index.js
model/: feature_extraction.py  requirements.txt
src/: bot.rs  crawl.rs  crawler.rs  db.rs  db_conn.rs  main.rs  react.rs  schema.rs  settings.rs  solr.rs  tests.rs  web_api.rs
