[package]
name = "querty"
version = "0.1.0"
authors = ["nasko25 <apashov0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
serde = "1.0.115"
serde_derive = "1.0.115"
diesel = { version = "1.4.5", features = ["mysql", "numeric"] }
reqwest = { version = "0.10.7",  features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
scraper = "0.12.0"
throw = "0.1.7"

# TODO use url to check if <a> tags of a website link to external domains
url = "2.1.1"
