[package]
name = "querty"
version = "0.1.0"
authors = ["nasko25 <apashov0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
serde = "1.0.115"
serde_derive = "1.0.115"
diesel = { version = "1.4.5", features = ["mysql", "numeric"] }
reqwest = { version = "0.10.7",  features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
scraper = "0.12.0"
throw = "0.1.7"
pyo3 = "0.12.4"
xmlrpc = "0.14.0"
simple-error = "0.2.2"

url = "2.1.1"
publicsuffix = "1.3.1"

shellexpand = "2.1.0"

rocket = "0.4.9"
rocket_contrib = "0.4.9"

colour = "0.6.0"

urlencoding = "1.3.3"
