[package]
name = "querty"
version = "0.1.0"
authors = ["nasko25 <apashov0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
serde = "1.0.136"
serde_derive = "1.0.136"
diesel = { version = "1.4.8", features = ["mysql", "numeric"] }
reqwest = { version = "0.11.9",  features = ["json"] }
tokio = { version = "1.16.1", features = ["rt", "rt-multi-thread", "macros"] }
scraper = "0.12.0"
throw = "0.1.7"
pyo3 = "0.15.1"
xmlrpc = "0.15.1"
simple-error = "0.2.3"

url = "2.2.2"
publicsuffix = "1.5.6"

shellexpand = "2.1.0"

rocket = "0.4.10"
rocket_contrib = "0.4.10"

colour = "0.6.0"

urlencoding = "2.1.0"
indexmap = { version = "1.8.0", features = ["serde"] }

regex = "1.5.4"

futures = "0.3.21"
dotenv = "0.15.0"

once_cell = "1.9.0"

chrono = "0.4"
lazy_static = "1.4.0"

async-std = "1.10.0"
sitemap = "0.4.1"
